; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wininet/extr_http.c_HTTP_FreeTokens.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wininet/extr_http.c_HTTP_FreeTokens.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*****)* @HTTP_FreeTokens to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @HTTP_FreeTokens(i32***** %0) #0 {
  %2 = alloca i32*****, align 8
  %3 = alloca i32, align 4
  store i32***** %0, i32****** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %19, %1
  %5 = load i32*****, i32****** %2, align 8
  %6 = load i32, i32* %3, align 4
  %7 = sext i32 %6 to i64
  %8 = getelementptr inbounds i32****, i32***** %5, i64 %7
  %9 = load i32****, i32***** %8, align 8
  %10 = icmp ne i32**** %9, null
  br i1 %10, label %11, label %22

11:                                               ; preds = %4
  %12 = load i32*****, i32****** %2, align 8
  %13 = load i32, i32* %3, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32****, i32***** %12, i64 %14
  %16 = load i32****, i32***** %15, align 8
  %17 = bitcast i32**** %16 to i32*****
  %18 = call i32 @heap_free(i32***** %17)
  br label %19

19:                                               ; preds = %11
  %20 = load i32, i32* %3, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %3, align 4
  br label %4

22:                                               ; preds = %4
  %23 = load i32*****, i32****** %2, align 8
  %24 = call i32 @heap_free(i32***** %23)
  ret void
}

declare dso_local i32 @heap_free(i32*****) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
